# ladspavid

./: .gitignore  AUTHORS  README  autogen.sh  configure  configure.ac  pipelines.txt  video.c
src/: Makefile.am  Makefile.def  Makefile.tpl  gstladspavid.c  gstladspavid.h  gstladspavid.tpl  gstladspavidbodeshifter.c  gstladspavidbodeshifter.def  gstladspavidbodeshifter.h  gstladspavidcrossoverdist.c  gstladspavidcrossoverdist.def  gstladspavidcrossoverdist.h  gstladspaviddelayorama.c  gstladspaviddelayorama.def  gstladspaviddelayorama.h  gstladspaviddysoncompress.c  gstladspaviddysoncompress.def  gstladspaviddysoncompress.h  gstladspavidflanger.c  gstladspavidflanger.def  gstladspavidflanger.h  gstladspavidgiantflange.c  gstladspavidgiantflange.def  gstladspavidgiantflange.h  gstladspavidse4.c  gstladspavidse4.def  gstladspavidse4.h  gstladspavidzm1.c  gstladspavidzm1.def  gstladspavidzm1.h  ladspa_wrapper.c  ladspa_wrapper.h  video.c
